C0: Notifications are now inline-block (fix for white gap at top of page). Added simple-form module for use outside of the quote journey.

--- a/Markel.REMUS.DesignSystem.Web/Scss/modules/notification/_notification.scss
+++ b/Markel.REMUS.DesignSystem.Web/Scss/modules/notification/_notification.scss
@@ -3,6 +3,8 @@
 @import "notification-error";
 @mixin notification($selector){
     #{$selector}{
+        display: inline-block;
+        width: 100%;
         margin-top: 6*$grid-unit;
         padding:2*$grid-unit;
         p {
